my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/pr60003.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr60003.c:8:26: warning: unknown attribute 'noclone' ignored; did you mean 'noinline'? [-Wunknown-attributes]
    8 | __attribute__((noinline, noclone)) void
      |                          ^~~~~~~
      |                          noinline
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr60003.c:11:22: warning: incompatible pointer types passing 'unsigned long long (*)[5]' to parameter of type 'void **' [-Wincompatible-pointer-types]
   11 |   __builtin_longjmp (&jmp_buf, 1);
      |                      ^~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr60003.c:11:3: error: __builtin_longjmp is not supported for the current target
   11 |   __builtin_longjmp (&jmp_buf, 1);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr60003.c:20:26: warning: unknown attribute 'noclone' ignored; did you mean 'noinline'? [-Wunknown-attributes]
   20 | __attribute__((noinline, noclone)) int
      |                          ^~~~~~~
      |                          noinline
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr60003.c:25:25: warning: incompatible pointer types passing 'unsigned long long (*)[5]' to parameter of type 'void **' [-Wincompatible-pointer-types]
   25 |   if (__builtin_setjmp (&jmp_buf) == 0)
      |                         ^~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr60003.c:25:7: error: __builtin_setjmp is not supported for the current target
   25 |   if (__builtin_setjmp (&jmp_buf) == 0)
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~
4 warnings and 2 errors generated.
